c3/HandlePtell
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:556:20: error: use of undeclared identifier 'off_41DD78'
if ( !strncmp( v1, off_41DD78, 3uLL) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:570:21: error: use of undeclared identifier 'off_41DD78'
if ( !strncmp( v1, &off_41DD78[4], 4uLL) || !strncmp( v1, "time", 4uLL) ) 
                    ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:587:22: error: use of undeclared identifier 'unk_41E1B7'
v2 = ( const char *)&unk_41E1B7; 
                     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:593:22: error: use of undeclared identifier 'unk_41E1DF'
v2 = ( const char *)&unk_41E1DF; 
                     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:753:12: error: expected expression
*( _OWORD *)hand_value = *( _OWORD *)std_hand_value; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:753:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)hand_value = *( _OWORD *)std_hand_value; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:754:12: error: expected expression
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:754:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:754:41: error: expected expression
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:754:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
                                ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:755:12: error: expected expression
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:755:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:755:41: error: expected expression
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/partner.c:755:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
                                ^
14 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/HandlePtell/src/obj/partner.o] Error 1
